# Main project declaration
PROJECT(REPY-2.0)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/servos" "${PROJECT_SOURCE_DIR}/src/boards")
ADD_SUBDIRECTORY( boards)
ADD_SUBDIRECTORY( servos)

ADD_EXECUTABLE(REPY-2.0 main.cpp repy_module.cpp)
TARGET_LINK_LIBRARIES(REPY-2.0 OOMLCore OOMLParts OOMLComponents SERVOS BOARDS)


INSTALL( TARGETS REPY-2.0 DESTINATION bin)




